# MCP

./: .gitignore  README.md
01_HTTP_overview/: http.md  readme.md
02_REST_Api_overview/: README.md
03_JsonRpc_overview/: README.md
04_MCP_mini_Documentation/01_Architecture Overview/: README.md
04_MCP_mini_Documentation/02_Server Concepts/: README.md
04_MCP_mini_Documentation/03_Client_Concepts/: README.md
04_MCP_mini_Documentation/04_Cancellation/: README.md
04_MCP_mini_Documentation/05_Ping/: README.md
04_MCP_mini_Documentation/06_Elicitation/: README.md
04_MCP_mini_Documentation/07_Completion/: READme.md
04_MCP_mini_Documentation/08_Pagination/: README.md
05_MCP basic/: README.md
05_MCP basic/00_Hello_Mcp/: README.md  client.py  example_server.py  pyproject.toml  server.py
05_MCP basic/01_Mcp_Server/: client.py  main.py  pyproject.toml
05_MCP basic/02_Mcp_Client/: client.py  exp_client.py  pyproject.toml
06_Advance_MCP/: README.md
06_Advance_MCP/01_mcp_transports/: README.md
06_Advance_MCP/02_Statefull_Lifecycle/: client.py  server.py
06_Advance_MCP/03_Sampling/: README.md  client.py  pyproject.toml  server.py
06_Advance_MCP/04_logging_notifications/: README.md  client.py  pyproject.toml  server.py
06_Advance_MCP/05_Tool_Progress/: README.md  client.py  (+2 more)
07_openai_agents_sdk_integration/: README.md
08_Agent_connect_with_tavily_MCP/: README.md  main.py  pyproject.toml  server_config.json
09_Remote_MCP_Server/: combine_code.py  live_search.py  mcp_calculator.py  pyproject.toml  requirements.txt
JsonRpc_overview/: jsonrpc.md
(+60 files in other folders)
