[project]
name = "hello-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "anthropic>=0.60.0",
  "fastapi>=0.116.1",
  "httpx>=0.28.1",
  "mcp[cli]==1.8.0",
  "prompt-toolkit>=3.0.51",
  "python-dotenv>=1.1.1",
  "requests>=2.32.4",
  "uvicorn>=0.35.0",
]
